# uefi-eventlog-rs

./: Cargo.toml  README.md  tool.rs
src/: lib.rs  parsed.rs
test_assets/: bootlog
