[package]
name = "uefi-eventlog"
version = "0.1.0"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"

[[bin]]
name = "uefi-eventlog-dump"
path = "tool.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
thiserror = "1.0"
byteorder = "1"
fallible-iterator = "0.2.0"
num-traits = "0.2"
num-derive = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
widestring = "0.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
uuid = { version = "0.8", features = ["serde"] }
